--- a/Mm0205.ImageVectorization.Demo/MainWindow.xaml
+++ b/Mm0205.ImageVectorization.Demo/MainWindow.xaml
@@ -113,6 +113,7 @@
 
                         <Button x:Name="ButtonOpenImageFolder"
                                 Margin="10,0"
+                                Click="ButtonOpenImageFolder_OnClick"
                                     Content="画像フォルダを開く"></Button>
 
                         <ScrollViewer Grid.Column="1" 
